# tinyfish-hack

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
travel_deals_agent/: __init__.py  cli.py  config.py  itinerary_graph.py  itinerary_prompts.py  itinerary_schemas.py  orchestrator.py  orchestrator_schemas.py  prompts.py  provider_discovery.py  router.py  search_service.py  server.py  tracing.py
travel_deals_agent/tools/: __init__.py  ticket_scraper_tool.py  web_search_tool.py
